removed model provider

--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -52,23 +52,6 @@ We need four identity levels because they solve different problems:
 
 If we collapse these into one ID, we lose deterministic cancellation fences, traceability, and clean operator controls.
 
-### Function of each ID
-
-1. `session_id`
-   - Reducer cell key (`key_field` target).
-   - Long-lived memory boundary (settings/history/cache).
-   - Used by UI/API as the durable handle.
-2. `run_id`
-   - Distinguishes separate executions in the same session.
-   - Terminal state boundary (`Completed`/`Failed`/`Cancelled`) is per run.
-   - Needed so late receipts from old runs can be ignored.
-3. `turn_id`
-   - Groups one LLM request/response cycle.
-   - Correlates tool calls/results to the exact model response that produced them.
-4. `step_id`
-   - Total ordering inside a turn for host-control observation and event replay analysis.
-   - Causation anchor for effect intents/receipts and diagnostics.
-
 ## Identity Model (hierarchical)
 
 Instead of opaque unrelated strings, IDs are hierarchical so parent/child relationships are explicit:
@@ -83,7 +66,6 @@ This allows deterministic incrementing in reducer state while limiting UUID gene
 
 1. Define core SDK schemas under `aos.agent/*`:
    - `aos.agent/SessionId@1`
-   - `aos.agent/ProviderProfileId@1`
    - `aos.agent/RunId@1`
    - `aos.agent/TurnId@1`
    - `aos.agent/StepId@1`
@@ -120,8 +102,6 @@ This allows deterministic incrementing in reducer state while limiting UUID gene
 
 ## Proposed Schema Shapes (AIR-style)
 
-Below is the intended shape. Final field names can be adjusted, but the semantics should stay.
-
 ### Identity Schemas
 
 ```json
@@ -129,14 +109,6 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "$kind": "defschema",
   "name": "aos.agent/SessionId@1",
   "type": { "uuid": {} }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ProviderProfileId@1",
-  "type": { "text": {} }
 }
 ```
 
@@ -179,7 +151,7 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 }
 ```
 
-### Lifecycle and Commands
+### Lifecycle + Config Schemas
 
 ```json
 {
@@ -201,7 +173,8 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "name": "aos.agent/SessionConfig@1",
   "type": {
     "record": {
-      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
+      "provider": { "text": {} },
+      "model": { "text": {} },
       "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
       "max_tokens": { "option": { "nat": {} } }
     }
@@ -209,9 +182,8 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 }
 ```
 
-`SessionConfig@1` is profile-first mutable defaults for future runs.
-`RunConfig@1` is the resolved immutable snapshot for one active run and includes concrete
-provider/model values derived at `RunStarted`.
+`SessionConfig@1` is mutable default config for future runs.
+`RunConfig@1` is the immutable snapshot for one active run.
 
 ```json
 {
@@ -219,7 +191,6 @@ provider/model values derived at `RunStarted`.
   "name": "aos.agent/RunConfig@1",
   "type": {
     "record": {
-      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
       "provider": { "text": {} },
       "model": { "text": {} },
       "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
@@ -247,6 +218,8 @@ provider/model values derived at `RunStarted`.
   }
 }
 ```
+
+### Host Command Schema
 
 ```json
 {
@@ -278,85 +251,7 @@ provider/model values derived at `RunStarted`.
 }
 ```
 
-`command_id` exists for idempotency and audit (host retries should not double-apply control).
-`target_run_id` scopes the command to a specific run when provided.
-`expected_session_epoch` is an optional optimistic-concurrency fence to reject stale control actions.
-
-### Host command targeting semantics
-
-- If `target_run_id` is present: apply only if it matches the active run, otherwise reject as stale/invalid target.
-- If `target_run_id` is absent: apply to current active run (best-effort convenience path).
-- If `expected_session_epoch` is present: apply only when it matches current session epoch.
-- `LeaseHeartbeat` must target the active run lease and match `active_run_lease.lease_id`; non-matching lease ids are rejected and logged.
-
-### Parallel tool batch and lease schemas
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ToolBatchId@1",
-  "type": {
-    "record": {
-      "step_id": { "ref": "aos.agent/StepId@1" },
-      "batch_seq": { "nat": {} }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ToolCallStatus@1",
-  "type": {
-    "variant": {
-      "Pending": { "unit": {} },
-      "Succeeded": { "unit": {} },
-      "Failed": { "record": { "code": { "text": {} }, "detail": { "text": {} } } },
-      "IgnoredStale": { "unit": {} },
-      "Cancelled": { "unit": {} }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ActiveToolBatch@1",
-  "type": {
-    "record": {
-      "tool_batch_id": { "ref": "aos.agent/ToolBatchId@1" },
-      "issued_at_step_epoch": { "nat": {} },
-      "expected_call_ids": { "set": { "text": {} } },
-      "call_status": {
-        "map": {
-          "key": { "text": {} },
-          "value": { "ref": "aos.agent/ToolCallStatus@1" }
-        }
-      },
-      "results_ref": { "option": { "hash": {} } }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/RunLease@1",
-  "type": {
-    "record": {
-      "lease_id": { "uuid": {} },
-      "issued_at": { "time": {} },
-      "expires_at": { "time": {} },
-      "heartbeat_timeout_secs": { "nat": {} }
-    }
-  }
-}
-```
-
-### Session State
+### Session State + Events
 
 ```json
 {
@@ -390,26 +285,6 @@ provider/model values derived at `RunStarted`.
 }
 ```
 
-### Event Envelope
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/SessionEvent@1",
-  "type": {
-    "record": {
-      "session_id": { "ref": "aos.agent/SessionId@1" },
-      "run_id": { "option": { "ref": "aos.agent/RunId@1" } },
-      "turn_id": { "option": { "ref": "aos.agent/TurnId@1" } },
-      "step_id": { "option": { "ref": "aos.agent/StepId@1" } },
-      "session_epoch": { "nat": {} },
-      "step_epoch": { "nat": {} },
-      "event": { "ref": "aos.agent/SessionEventKind@1" }
-    }
-  }
-}
-```
-
 ```json
 {
   "$kind": "defschema",
@@ -434,35 +309,17 @@ provider/model values derived at `RunStarted`.
 }
 ```
 
-`SessionEvent` is an envelope so correlation fields are always present and uniform for tooling.
-
 ## Model Mutability Rule
 
-Model/provider can change within a session, but only at run boundaries:
+Provider/model can change within a session, but only at run boundaries:
 
 1. Session stores mutable defaults in `session_config`.
-2. `RunRequested.run_overrides` may replace those defaults for the next run.
-3. On `RunStarted`, reducer snapshots `active_run_config` only after successful profile lookup resolution (see P2.2 dedicated profile-catalog flow).
+2. `RunRequested.run_overrides` may fully replace those defaults for the next run.
+3. On `RunStarted`, reducer snapshots immutable `active_run_config`.
 4. `active_run_config.provider` and `active_run_config.model` are immutable until run terminal state.
-5. Next run may use different resolved model/provider.
-
-Profile-first constraint:
-
-- Session and run request configuration choose `provider_profile_id`; they do not directly set provider/model.
-- Provider/model are resolved once at run start via typed profile lookup events and persisted only in `active_run_config`.
-- `RunRequested.run_overrides` is a full run-scoped config value, not a sparse patch.
-
-Run-start extension boundary:
-
-- P2.2 adds profile lookup request/result events between `RunRequested` and `RunStarted`.
-- P2.1 lifecycle semantics remain unchanged: once `RunStarted` is emitted, active run config is immutable for that run.
-- If profile lookup fails, run transitions to failure path without activating an immutable run config.
+5. Next run may use a different provider/model.
 
 ## Deterministic Parallel Tool Batch Contract
-
-Agents may issue multiple tool calls in one step. The reducer must track one active
-batch per tool round and must not request the next LLM step until the batch is
-settled.
 
 Rules:
 
@@ -470,79 +327,19 @@ Rules:
 2. Receipt ingestion order must not affect semantic `results_ref` ordering. Results are normalized by call id order.
 3. Reducer may advance to next LLM step only after batch settled.
 
-## Pause / Resume / Cancel Semantics with In-Flight Effects
-
-These rules are mandatory:
+## Pause / Resume / Cancel Semantics
 
 1. `Pause` transitions `Running -> Paused` only at a step boundary.
 2. While `Paused`, no new effect intents are emitted.
 3. In-flight receipts during `Paused` are accepted and journaled, and only mutate active batch status.
-4. `Resume` transitions `Paused -> Running` and continues from reducer state without replaying already-settled call ids.
+4. `Resume` transitions `Paused -> Running` and continues from reducer state without replaying settled call ids.
 5. `Cancel` transitions `Running|Paused -> Cancelling`, increments both `session_epoch` and `step_epoch`, and blocks new effect intents.
 6. After `Cancelling`, terminal transition to `Cancelled` occurs when all in-flight call ids are terminal or ignored stale.
 7. Any receipt tagged with stale `(run_id, session_epoch, step_epoch)` is recorded for audit and marked `IgnoredStale`.
 
-## Long-Run Liveness and Lease Fence
-
-Long-running autonomous runs must use lease fencing:
-
-1. Host must renew lease before `expires_at` via `HostCommand.LeaseHeartbeat`.
-2. If lease expires, reducer transitions to `Cancelling` with reason `lease_expired`.
-3. Lease checks are deterministic: compare journaled `heartbeat_at` from command payload, never wall clock.
-
-## Runtime Use of IDs (example timeline)
-
-Given `session_id = "550e8400-e29b-41d4-a716-446655440000"`:
-
-1. First input starts `run_id = {session_id:"550e8400-e29b-41d4-a716-446655440000", run_seq:1}`.
-2. First model round starts `turn_id = {run_id, turn_seq:1}`.
-3. Steps progress:
-   - `step_id(..., step_seq:1)` for `LlmStepRequested`
-   - `step_id(..., step_seq:2)` for tool fan-out request
-   - `step_id(..., step_seq:3)` for result ingestion
-4. Host issues cancel:
-   - reducer sets lifecycle `Cancelling`
-   - increments `session_epoch` and `step_epoch`
-5. Late receipt from old step arrives with stale fence values:
-   - recorded and marked `IgnoredStale`.
-
-This is why IDs and epochs are both needed:
-- IDs give lineage,
-- epochs give safe invalidation boundaries.
-
-## Relationship to `tmp-llm-lib-code/02-coding-agent-loop-spec.md`
-
-That document is useful inspiration, but it is not a source of truth for AOS contracts.
-
-### Adopt (with adaptation)
-
-1. Explicit session lifecycle states.
-2. Host control queues (`steer`, `follow_up`) and next-boundary observation semantics.
-3. Limit-driven loop control (`max_turns`, round limits) as first-class config.
-4. Strong event-driven mindset for host integrations.
-
-### Do not adopt directly
-
-1. In-memory library session as the authority.
-   - In AOS, durable events + reducer state are authoritative.
-2. Provider/CLI-specific runtime assumptions (for example process-group kill behavior) at core schema level.
-   - Those belong in adapter/tool contracts, not base session schemas.
-3. A single generic `SessionEvent` map payload model.
-   - In AOS we need strongly typed, versioned schemas for replay safety.
-4. Implicit cancellation semantics.
-   - AOS requires explicit event ordering and epoch fences for deterministic stale-result handling.
-
-### Practical rule
-
-When the loop spec and AOS constraints differ, choose AOS invariants:
-- deterministic replay,
-- reducer-owned state transitions,
-- plan-only orchestration of privileged effects,
-- typed/versioned event contracts.
-
 ## Non-Goals
 
-- Provider profile resolution logic (handled in P2.2).
+- Provider catalog/profile indirection.
 - Tool output truncation/bounding policy (handled in P2.3).
 - Failure taxonomy ownership and retry strategy (handled in P2.5).
 - Streaming/event transport details.
@@ -550,25 +347,12 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
 ## Deliverables
 
 1. New AIR schema files for session lifecycle/control contracts.
-2. `aos-agent-sdk` crate with:
-   - core IDs and state/event types,
-   - lifecycle transition helpers,
-   - command-queue semantics (`steer`, `follow_up`),
-   - active batch settle helpers,
-   - lease heartbeat/expiry helpers,
-   - SDK reducer/pure module binaries under `src/bin/*`,
-   - reusable AIR assets under `air/` for schemas/module defs/plan templates.
+2. `aos-agent-sdk` crate with core IDs and state/event types, lifecycle helpers, queue semantics, and settle helpers.
 3. Template keyed reducer and routing conventions:
    - key by `session_id`,
    - route `SessionEvent` to `SessionReducer`.
 4. Cross-stage contract notes for P2.2/P2.3/P2.5 so later stages extend but do not redefine base session semantics.
 5. P2.1 smoke fixture(s) under `crates/aos-smoke` covering lifecycle/control behavior with deterministic replay assertions.
-
-## Specs Alignment
-
-- `spec/03-air.md`: event-triggered plans and strict schema validation.
-- `spec/04-reducers.md`: reducer owns state transitions and business logic.
-- `spec/02-architecture.md`: journal-backed determinism and receipts.
 
 ## Exit Criteria
 
