--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -5,56 +5,46 @@
 
 ## Summary
 
-There is a boundary conflict in current P2.2 direction:
+There was a boundary conflict in early P2.2 direction:
 
-- `sys/llm.generate@1` is a low-level built-in effect contract used by core runtime + host adapter.
+- `sys/llm.generate@1` is a low-level built-in effect contract used by core runtime + host adapters.
 - `aos.agent/*` is an SDK layer that should build on top of core primitives.
 
-Current scaffold work accidentally blurred this boundary by defining `sys/Llm*` replacement schemas inside `crates/aos-agent-sdk` AIR assets. That makes the SDK appear authoritative for core `sys/*` contracts, which is architecturally backwards.
+Early scaffold work blurred this boundary by defining `sys/Llm*` schemas inside `crates/aos-agent-sdk` AIR assets. That made SDK assets appear authoritative for core `sys/*` contracts.
 
-We need to define an API via sys/LLMGenrate, et al., that allows us to fully steer aos-llm, but is agent sdk agnostic. aos-agent-sdk needs to be build on that interface without pushing llm stuff down into sys. It is absolutely valid to expand sys/llmgenerate and the like to enable features for the agent sdk.
-
+The rebaseline keeps `sys/llm.generate@1` agent-agnostic, and keeps SDK contracts focused on session/run semantics and deterministic mapping.
 
 ## Context
 
-### Current architecture expectations
+### Architecture expectations
 
 1. `sys/*` is core runtime surface:
    - built-in schemas/effects in `spec/defs/*`
    - shared low-level Rust types in core crates (`aos-effects`, `aos-host` adapters)
 2. `aos.agent/*` is product/SDK layer:
-   - session lifecycle, provider profile, lookup flow, loop state
-   - should compile down to `sys/*` effects for execution
+   - session lifecycle, run config, loop state
+   - compiles down to `sys/*` effects for execution
 
 ### What happened in scaffolding
 
-In `crates/aos-agent-sdk/air/schemas.air.json`, we added:
-
-- `sys/LlmRuntimeArgs@1`
-- `sys/LlmGenerateParams@1`
-- `sys/LlmGenerateReceipt@1`
-
-That was done to reflect P2.2 schema drafts quickly, but it incorrectly places `sys/*` schema ownership under SDK assets.
+In `crates/aos-agent-sdk/air/schemas.air.json`, temporary drafts introduced `sys/Llm*` schema definitions. That is now treated as invalid ownership and removed.
 
 ## Why this is a problem
 
-1. Layer inversion:
-   - SDK (`aos.agent/*`) should not define core built-in `sys/*` contracts.
-2. Coupling risk:
-   - Any SDK iteration could accidentally become a runtime schema fork.
-3. Migration ambiguity:
-   - unclear whether source-of-truth for `sys/Llm*` is `spec/defs`, `aos-effects`, or SDK assets.
-4. Operational risk:
-   - host adapter behavior is tied to `sys/Llm*`; if SDK changes these independently, execution can drift from manifests/tests.
+1. Layer inversion: SDK should not define core built-in contracts.
+2. Coupling risk: SDK iteration could accidentally fork runtime schemas.
+3. Migration ambiguity: unclear source of truth for `sys/Llm*`.
+4. Operational risk: adapter behavior can drift from manifests/tests.
 
 ## Recommendation
 
-Use strict two-layer separation.
+Use strict two-layer separation:
 
 1. Keep `sys/llm.generate@1` fully agent-agnostic.
-2. Keep all agent semantics in `aos.agent/*` contracts.
-3. Add an explicit deterministic translation boundary from agent runtime state to low-level `sys/LlmGenerateParams@1`.
-4. Only evolve `sys/Llm*` in core sources (`spec/defs`, `aos-effects`, `aos-host`) as a platform-wide change, not in SDK-local AIR files.
+2. Keep agent semantics in `aos.agent/*` contracts.
+3. Keep run config explicit (`provider`, `model`, optional tuning controls).
+4. Use a deterministic translation boundary from run/step state to `sys/LlmGenerateParams@1`.
+5. Evolve `sys/Llm*` only in core sources (`spec/defs`, `aos-effects`, `aos-host`).
 
 ## Recommended implementation model
 
@@ -65,50 +55,50 @@ Use strict two-layer separation.
    - `sys/LlmGenerateParams@1`
    - `sys/LlmGenerateReceipt@1`
 2. SDK owns:
-   - `aos.agent/ProviderProfile@1`
-   - `aos.agent/ProfileLookup*`
    - session/run/turn/step contracts
+   - mapper helpers and reducer-facing envelopes
 
 ### B. Execution flow
 
-1. Session/Profile reducers resolve immutable run config in `aos.agent/*` state.
+1. Session reducer snapshots immutable `active_run_config` at `RunStarted`.
 2. Plan/reducer helper materializes `sys/LlmGenerateParams@1` from:
-   - active run config (provider/model/reasoning/max tokens)
-   - deterministic step context (message refs, tools, metadata, stop sequences, etc.)
-3. Host executes `llm.generate` using the core adapter.
-4. Receipt (`sys/LlmGenerateReceipt@1`) is ingested and mapped to `aos.agent/*` events/state.
+   - active run config (`provider`, `model`, optional `reasoning_effort`, optional `max_tokens`)
+   - deterministic step context (`message_refs`, tools, metadata, stop sequences, response format/options refs)
+3. Host executes `llm.generate` using core adapters.
+4. Receipt (`sys/LlmGenerateReceipt@1`) is ingested and mapped to SDK events/state.
 
-### C. When to add a dedicated agent effect adapter
+### C. Defaults and determinism
 
-Only add `aos.agent/*` effect kind if required behavior cannot be represented in `sys/LlmGenerateParams@1` without polluting core contracts. Default should be reuse of `sys/llm.generate@1`.
+- Host/provider defaults are only applied when a field is explicitly left unset in params.
+- Host catalog metadata may validate and produce diagnostics, but may not mutate journaled effect params.
 
 ## Immediate cleanup tasks
 
-1. Remove `sys/Llm*` schema definitions from:
-   - `crates/aos-agent-sdk/air/schemas.air.json`
-2. Keep SDK manifest focused on `aos.agent/*` schemas/modules.
-3. Add SDK-side mapper types/helpers:
-   - example: `AgentLlmStepRequest -> sys::LlmGenerateParams`
-4. If P2.2 requires richer low-level fields, implement those changes in core:
+1. Remove any SDK-local `sys/Llm*` schema ownership.
+2. Remove provider-profile and profile-lookup contracts from SDK scope.
+3. Keep SDK manifest focused on direct session/run contracts.
+4. Add/keep SDK-side mapper helpers:
+   - `RunConfig + StepContext -> sys::LlmGenerateParams`
+5. If richer low-level fields are needed, evolve them in core:
    - `spec/defs/builtin-schemas.air.json`
    - `aos-effects` `LlmGenerateParams/Receipt`
-   - `aos-host` `LlmAdapter` mapping into `aos-llm::Request`
+   - `aos-host` adapter mapping into `aos-llm::Request`
 
 ## Decision statement for roadmap docs
 
-P2.2 should be interpreted as:
+P2.2 is interpreted as:
 
 - "Evolve low-level LLM contract in core (`sys/*`)"
-- and "add agent-level profile/lookup/output contracts in SDK (`aos.agent/*`)"
+- and "use direct provider/model run config in SDK (`aos.agent/*`)"
 
-not as "define/replace `sys/*` contracts inside `aos-agent-sdk` assets".
+not as profile-registry choreography and not as SDK-local ownership of core `sys/*` schemas.
 
 ## Resume checklist
 
-1. Clean SDK AIR assets to remove `sys/Llm*` ownership.
+1. Clean SDK AIR assets to remove profile/catalog schemas and reducer routing.
 2. Implement core-side `sys/Llm*` evolution in `spec/defs` + runtime crates.
-3. Implement SDK mapper and reducer event flow on top.
+3. Implement SDK mapper flow on top.
 4. Add integration tests proving:
-   - agent layer remains provider-profile aware,
    - core adapter remains agent-agnostic,
-   - replay determinism preserved.
+   - SDK deterministically maps run/step state into core params,
+   - replay determinism is preserved.
