--- a/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
@@ -13,7 +13,7 @@ This stage resolves concerns #8 and #9.
 ## Scope
 
 1. Define conformance matrix:
-   - provider profiles: `openai-responses`, `anthropic-messages`, `openai-compatible`.
+   - provider/model combinations: `openai/*`, `anthropic/*`, `openai-compatible/*`.
    - scenarios:
      - no-tool completion,
      - tool call roundtrip,
@@ -24,8 +24,8 @@ This stage resolves concerns #8 and #9.
      - policy/cap denial,
      - adapter timeout/error,
      - parent/child session lifecycle,
-     - unknown provider profile id,
-     - profile change across runs with no in-run drift,
+     - unknown provider/model,
+     - provider/model change across runs with no in-run drift,
      - boundary ownership guard (no SDK-local `sys/Llm*` schema definitions).
 2. Add replay-oriented end-to-end assertions:
    - journal replay from genesis,
@@ -57,16 +57,16 @@ This stage resolves concerns #8 and #9.
 - Keep replay-or-die as non-negotiable acceptance criterion.
 - Deterministic lane is required for CI gating and uses reproducible adapters/fixtures.
 - Live-provider lane is opt-in and validates real-provider interop, but is not used for replay-parity gating.
-- Include profile-catalog reducer fixtures proving event-driven lookup (`ProfileLookupRequested -> ProfileLookupResolved|Failed`) before `RunStarted`.
+- Include fixtures proving run-start immutability (`RunRequested -> RunStarted -> fixed active_run_config`) and no in-run provider/model drift.
 
 ## Exit Criteria
 
-1. Conformance matrix passes for all required provider profiles and scenarios.
+1. Conformance matrix passes for all required provider/model scenarios.
 2. Demiurge runs on core SDK contracts with no bespoke loop semantics remaining in reducer state machine.
 3. Parent/child session orchestration sample passes deterministic integration and replay tests.
 4. All prior stage exit criteria remain green after migration.
 5. P2 marked complete only after closure report is published.
 6. `aos-smoke` deterministic lane is green in CI; live-provider lane is available and documented as opt-in.
-7. Unknown `provider_profile_id` deterministically fails run start through typed lookup-failure path (no partial run activation).
-8. Profile updates only affect subsequent runs; active runs keep immutable `active_run_config` values through completion/cancel.
+7. Unknown provider/model deterministically fails run start with no partial run activation.
+8. Provider/model updates only affect subsequent runs; active runs keep immutable `active_run_config` through completion/cancel.
 9. Repository-level conformance checks confirm `sys/Llm*` ownership remains in core crates and spec assets, not in SDK AIR assets.
