--- a/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
@@ -1,31 +1,29 @@
 # P2.2: Direct Provider/Model LLM Contract Evolution
 
 **Stage**: P2.2  
-**Status**: Proposed  
+**Status**: In Progress (mostly complete)  
 **Depends on**: P2.1
 
 ## Implementation Progress (2026-02-13)
 
-Completed scaffold work:
+Completed:
 
-1. Added P2.2 LLM contract scaffolding in SDK/core integration paths.
-2. Added Rust contract scaffolding:
-   - `crates/aos-agent-sdk/src/contracts/llm.rs`
-3. Added core-side typed params/receipt structs used by host adapters:
-   - `crates/aos-effects/src/builtins/mod.rs`
+1. Removed provider-profile/profile-lookup scaffolding from `aos-agent-sdk` contracts, AIR assets, and reducer bins.
+2. Rebased SDK contracts to direct provider/model run config:
+   - `SessionConfig@1` and `RunConfig@1` now carry `provider` + `model`.
+3. Core `sys/Llm*` contract shapes are present in primary ownership locations:
+   - `spec/defs/builtin-schemas.air.json`,
+   - `crates/aos-effects/src/builtins/mod.rs`,
+   - `crates/aos-host/src/adapters/llm.rs`.
 4. Build status:
    - `cargo check -p aos-agent-sdk` passes.
 
-Remaining for full P2.2 completion:
+Remaining:
 
-1. Remove profile-lookup scaffolding from SDK assets and contracts.
-2. Finalize core-side `sys/Llm*` schema evolution in:
-   - `spec/defs`,
-   - `aos-effects`,
-   - `aos-host`,
-   - cap enforcers/tests.
-3. Implement deterministic mapper flow from SDK run/step state to core `sys/LlmGenerateParams@1`.
-4. Add deterministic integration coverage for multiple providers with identical contracts.
+1. Add SDK deterministic mapper helpers for:
+   - `RunConfig + StepContext -> sys/LlmGenerateParams@1`.
+2. Add/confirm deterministic integration coverage focused on SDK mapping + replay parity under P2.2 acceptance criteria.
+3. Close any remaining P2.2-specific conformance assertions across cap enforcer/runtime tests.
 
 ## Ownership Boundary (Authoritative)
 
