--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -1,7 +1,7 @@
 # P2.2 LLM Boundary Issue: `sys/*` vs `aos.agent/*`
 
 **Date**: 2026-02-13  
-**Status**: Accepted; roadmap rebaseline applied on 2026-02-13
+**Status**: Accepted; roadmap rebaseline applied on 2026-02-13 (cleanup mostly complete)
 
 ## Summary
 
@@ -74,12 +74,12 @@ Use strict two-layer separation:
 
 ## Immediate cleanup tasks
 
-1. Remove any SDK-local `sys/Llm*` schema ownership.
-2. Remove provider-profile and profile-lookup contracts from SDK scope.
-3. Keep SDK manifest focused on direct session/run contracts.
-4. Add/keep SDK-side mapper helpers:
+1. [x] Remove any SDK-local `sys/Llm*` schema ownership.
+2. [x] Remove provider-profile and profile-lookup contracts from SDK scope.
+3. [x] Keep SDK manifest focused on direct session/run contracts.
+4. [ ] Add/keep SDK-side mapper helpers:
    - `RunConfig + StepContext -> sys::LlmGenerateParams`
-5. If richer low-level fields are needed, evolve them in core:
+5. [x] If richer low-level fields are needed, evolve them in core:
    - `spec/defs/builtin-schemas.air.json`
    - `aos-effects` `LlmGenerateParams/Receipt`
    - `aos-host` adapter mapping into `aos-llm::Request`
@@ -95,10 +95,10 @@ not as profile-registry choreography and not as SDK-local ownership of core `sys
 
 ## Resume checklist
 
-1. Clean SDK AIR assets to remove profile/catalog schemas and reducer routing.
-2. Implement core-side `sys/Llm*` evolution in `spec/defs` + runtime crates.
-3. Implement SDK mapper flow on top.
-4. Add integration tests proving:
+1. [x] Clean SDK AIR assets to remove profile/catalog schemas and reducer routing.
+2. [x] Implement core-side `sys/Llm*` evolution in `spec/defs` + runtime crates.
+3. [ ] Implement SDK mapper flow on top.
+4. [ ] Add integration tests proving:
    - core adapter remains agent-agnostic,
    - SDK deterministically maps run/step state into core params,
    - replay determinism is preserved.
