--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -1,12 +1,12 @@
 # P2.1: Session Contracts and Core `aos.agent/*` Schemas
 
 **Stage**: P2.1  
-**Status**: Proposed  
+**Status**: In Progress  
 **Depends on**: P1 complete
 
 ## Implementation Progress (2026-02-13)
 
-Completed scaffold work:
+Completed:
 
 1. Added new SDK crate and workspace wiring:
    - `crates/aos-agent-sdk`
@@ -25,13 +25,20 @@ Completed scaffold work:
    - `crates/aos-agent-sdk/src/bin/session_event_echo.rs`
 6. Build status:
    - `cargo check -p aos-agent-sdk` passes.
+7. Implemented first functional reducer slice:
+   - shared deterministic event application helper (`apply_session_event`),
+   - run-start config selection/snapshot and required field validation,
+   - pause/resume/cancel command application with epoch-fence increment on cancel.
+8. Added deterministic P2.1 coverage:
+   - SDK unit tests for run-start snapshot + validation failure cases,
+   - smoke fixture `10-agent-session` with replay-parity verification.
 
 Remaining for full P2.1 completion:
 
-1. Implement full lifecycle/control business logic (not just scaffold transitions/helpers).
+1. Complete full lifecycle/control behavior across all listed semantics (`steer`, `follow_up`, lease heartbeat expiry path, and boundary timing rules).
 2. Implement deterministic stale receipt handling and epoch fence behavior end-to-end.
 3. Implement active tool-batch settle semantics with deterministic result ordering.
-4. Add P2.1 smoke fixtures and replay-parity assertions in `crates/aos-smoke`.
+4. Expand P2.1 smoke coverage beyond the current no-tool lifecycle slice to include concurrency/cancel/stale-receipt scenarios.
 
 ## Purpose
 
@@ -364,3 +371,5 @@ Rules:
 6. Lease heartbeat renewal and lease-expiry cancellation path are deterministic from journaled command payloads.
 7. Replay test proves byte-identical final state for equivalent journal.
 8. P2.1 end-to-end coverage executes via `aos-smoke` fixtures (no separate SDK-local e2e runner).
+
+Status note (2026-02-13): current implementation satisfies the no-tool lifecycle/replay slice (#1, #7, #8) and leaves tool-batch/stale-receipt/lease-boundary criteria open.
