--- a/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
@@ -1,7 +1,7 @@
 # P2.2: Direct Provider/Model LLM Contract Evolution
 
 **Stage**: P2.2  
-**Status**: In Progress (mostly complete)  
+**Status**: In Progress (mapper + replay slice landed)  
 **Depends on**: P2.1
 
 ## Implementation Progress (2026-02-13)
@@ -17,13 +17,17 @@ Completed:
    - `crates/aos-host/src/adapters/llm.rs`.
 4. Build status:
    - `cargo check -p aos-agent-sdk` passes.
+5. Implemented SDK deterministic mapper helpers:
+   - `RunConfig + StepContext -> sys/LlmGenerateParams@1`
+   - includes reasoning effort enum-to-text mapping and required-field validation.
+6. Added deterministic SDK coverage:
+   - mapper unit tests (success + validation failures),
+   - run-start validation tests and smoke replay slice (`aos-smoke agent-session`).
 
 Remaining:
 
-1. Add SDK deterministic mapper helpers for:
-   - `RunConfig + StepContext -> sys/LlmGenerateParams@1`.
-2. Add/confirm deterministic integration coverage focused on SDK mapping + replay parity under P2.2 acceptance criteria.
-3. Close any remaining P2.2-specific conformance assertions across cap enforcer/runtime tests.
+1. Add/confirm deterministic integration coverage focused on full P2.2 acceptance criteria (provider paths, runtime refs, receipt envelope fields).
+2. Close any remaining P2.2-specific conformance assertions across cap enforcer/runtime tests.
 
 ## Ownership Boundary (Authoritative)
 
@@ -257,6 +261,8 @@ Any in-run change request is deferred to the next run (or rejected by policy).
 3. `aos-effects` + `aos-host` + cap enforcer updates aligned to core schema replacement.
 4. SDK mapper helpers from run/step state into core `sys/LlmGenerateParams@1`.
 5. Manifest/cap/policy updates aligned to direct provider/model run config.
+
+Status note (2026-02-13): Deliverable #4 is now implemented in `aos-agent-sdk`; remaining work is convergence of full acceptance-criteria coverage across integration and conformance tests.
 
 ## Exit Criteria
 
