--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -1,7 +1,7 @@
 # P2.1: Session Contracts and Core `aos.agent/*` Schemas
 
 **Stage**: P2.1  
-**Status**: In Progress  
+**Status**: In Progress (core lifecycle + settle/stale semantics landed)  
 **Depends on**: P1 complete
 
 ## Implementation Progress (2026-02-13)
@@ -32,13 +32,21 @@ Completed:
 8. Added deterministic P2.1 coverage:
    - SDK unit tests for run-start snapshot + validation failure cases,
    - smoke fixture `10-agent-session` with replay-parity verification.
+9. Implemented lifecycle/control concurrency semantics:
+   - step-boundary handling for `steer` and `follow_up`,
+   - active tool-batch start/settle gating with deterministic call-id ordering,
+   - stale receipt marking (`IgnoredStale`) across epoch fences,
+   - lease-expiry cancellation path with deterministic finalize-to-`Cancelled`.
+10. Expanded smoke coverage in `10-agent-session`:
+   - tool batch settle flow,
+   - cancel with stale late receipts,
+   - lease-expiry cancellation path,
+   - replay parity after multi-run lifecycle progression.
 
 Remaining for full P2.1 completion:
 
-1. Complete full lifecycle/control behavior across all listed semantics (`steer`, `follow_up`, lease heartbeat expiry path, and boundary timing rules).
-2. Implement deterministic stale receipt handling and epoch fence behavior end-to-end.
-3. Implement active tool-batch settle semantics with deterministic result ordering.
-4. Expand P2.1 smoke coverage beyond the current no-tool lifecycle slice to include concurrency/cancel/stale-receipt scenarios.
+1. Add explicit dedicated smoke assertion for lease heartbeat renewal (not just expiry).
+2. Add one high-contention multi-batch/multi-receipt scenario to harden fan-in behavior under heavier ordering permutations.
 
 ## Purpose
 
@@ -372,4 +380,4 @@ Rules:
 7. Replay test proves byte-identical final state for equivalent journal.
 8. P2.1 end-to-end coverage executes via `aos-smoke` fixtures (no separate SDK-local e2e runner).
 
-Status note (2026-02-13): current implementation satisfies the no-tool lifecycle/replay slice (#1, #7, #8) and leaves tool-batch/stale-receipt/lease-boundary criteria open.
+Status note (2026-02-13): implementation now satisfies #1, #2, #3, #4, #5, #7, #8 and the lease-expiry portion of #6. A dedicated heartbeat-renewal coverage assertion remains open.
