--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -1,7 +1,7 @@
 # P2.2 LLM Boundary Issue: `sys/*` vs `aos.agent/*`
 
 **Date**: 2026-02-13  
-**Status**: Accepted; roadmap rebaseline applied on 2026-02-13 (cleanup complete, mapper flow landed)
+**Status**: Accepted; roadmap rebaseline applied on 2026-02-13 (cleanup complete, mapper + deterministic session boundary slice landed)
 
 ## Summary
 
@@ -103,4 +103,4 @@ not as profile-registry choreography and not as SDK-local ownership of core `sys
    - SDK deterministically maps run/step state into core params,
    - replay determinism is preserved.
 
-Status note (2026-02-13): SDK mapper helpers and a smoke replay slice are in place. A consolidated integration assertion set for all three bullets above remains open.
+Status note (2026-02-13): SDK mapper helpers, mapper unit assertions (including optional runtime fields), and expanded session smoke replay coverage are in place. A consolidated integration assertion set for all three bullets above remains open.
