--- a/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
@@ -1,7 +1,7 @@
 # P2.2: Direct Provider/Model LLM Contract Evolution
 
 **Stage**: P2.2  
-**Status**: In Progress (mapper + replay slice landed)  
+**Status**: In Progress (mapper + deterministic boundary coverage expanded)  
 **Depends on**: P2.1
 
 ## Implementation Progress (2026-02-13)
@@ -23,11 +23,15 @@ Completed:
 6. Added deterministic SDK coverage:
    - mapper unit tests (success + validation failures),
    - run-start validation tests and smoke replay slice (`aos-smoke agent-session`).
+7. Expanded deterministic acceptance coverage:
+   - verifies `provider_options_ref`/`response_format_ref` survive mapper materialization into core params,
+   - verifies omitted optional runtime controls stay unset (`max_tokens`, `reasoning_effort`, runtime refs) for deterministic defaulting behavior.
 
 Remaining:
 
-1. Add/confirm deterministic integration coverage focused on full P2.2 acceptance criteria (provider paths, runtime refs, receipt envelope fields).
-2. Close any remaining P2.2-specific conformance assertions across cap enforcer/runtime tests.
+1. Add/confirm provider-adapter integration coverage that mapper-emitted runtime refs round-trip through provider request execution paths.
+2. Add explicit deterministic `unknown provider/model` run-start failure coverage under SDK-driven flow (no partial activation).
+3. Close any remaining P2.2-specific conformance assertions across cap enforcer/runtime tests.
 
 ## Ownership Boundary (Authoritative)
 
@@ -262,7 +266,7 @@ Any in-run change request is deferred to the next run (or rejected by policy).
 4. SDK mapper helpers from run/step state into core `sys/LlmGenerateParams@1`.
 5. Manifest/cap/policy updates aligned to direct provider/model run config.
 
-Status note (2026-02-13): Deliverable #4 is now implemented in `aos-agent-sdk`; remaining work is convergence of full acceptance-criteria coverage across integration and conformance tests.
+Status note (2026-02-13): Deliverable #4 is implemented and mapper-level acceptance coverage is expanded; remaining work is provider-path integration completion and explicit unknown provider/model start-failure coverage.
 
 ## Exit Criteria
 
